INOA-337 Added functions for sequentially sending datapoints to the g… (#352)
* INOA-337 Added functions for sequentially sending datapoints to the gateway

The old functions has been set to deprecated and will be removed after rollout of OS version 0.4
I also did my best to leave the camping site cleaner as I found it on my arrival...

* INOA-337 Fix YAML