@@ -4,9 +4,9 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.HashMap;
+import java.util.HexFormat;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import org.junit.jupiter.api.Test;
@@ -18,18 +18,19 @@ import com.fasterxml.jackson.databind.node.ArrayNode;
 import io.inoa.fleet.thing.domain.Thing;
 import io.inoa.fleet.thing.domain.ThingType;
 import io.inoa.fleet.thing.driver.modbus.ModbusMDVH4006Builder;
+import io.inoa.fleet.thing.driver.modbus.Utils;
 
 public class ModbusMDVH4006BuilderTest {
 
 	@Test
-	public void testBuildDefinition() {
+	public void testBuildDefinitionLegacy() {
 		ModbusMDVH4006Builder builder = new ModbusMDVH4006Builder(new ObjectMapper());
 		Thing thing = new Thing();
 		thing.setName("schrank");
 		HashMap<String, Object> config = new HashMap<>();
 		HashMap<String, Object> properties = new HashMap<>();
 		HashMap<String, Object> channels = new HashMap<>();
-		properties.put("serial", 100022);
+		properties.put("serial", 39000976);
 		properties.put("modbus_interface", 1);
 
 		channels.put("obis_1_8_0", true);
@@ -44,37 +45,13 @@ public class ModbusMDVH4006BuilderTest {
 		thing.setConfig(config);
 		ThingType thingType = new ThingType();
 		thingType.setThingTypeReference("mdvh4006");
-		ArrayNode build = builder.build(thing, thingType);
-		List<JsonNode> items = StreamSupport.stream(build.spliterator(), false).collect(Collectors.toList());
+		ArrayNode build = builder.buildLegacy(thing, thingType);
+		List<JsonNode> items = StreamSupport.stream(build.spliterator(), false).toList();
 
-		Optional<JsonNode> obis180 = items.stream()
-				.filter(i -> i.get("header").get("id").asText().equals("urn:mdvh4006:100022:0x000D")).findFirst();
-		assertTrue(obis180.isPresent());
-		assertEquals("FgMADQAE1u0=", obis180.get().get("frame").asText());
-		Optional<JsonNode> obis181 = items.stream()
-				.filter(i -> i.get("header").get("id").asText().equals("urn:mdvh4006:100022:0x0012")).findFirst();
-		assertTrue(obis181.isPresent());
-		assertEquals("FgMAEgAE5ys=", obis181.get().get("frame").asText());
-		Optional<JsonNode> obis182 = items.stream()
-				.filter(i -> i.get("header").get("id").asText().equals("urn:mdvh4006:100022:0x0017")).findFirst();
-		assertTrue(obis182.isPresent());
-		assertEquals("FgMAFwAE9yo=", obis182.get().get("frame").asText());
-		Optional<JsonNode> obis280 = items.stream()
-				.filter(i -> i.get("header").get("id").asText().equals("urn:mdvh4006:100022:0x001C")).findFirst();
-		assertTrue(obis280.isPresent());
-		assertEquals("FgMAHAAEhug=", obis280.get().get("frame").asText());
-		Optional<JsonNode> obis281 = items.stream()
-				.filter(i -> i.get("header").get("id").asText().equals("urn:mdvh4006:100022:0x0021")).findFirst();
-		assertTrue(obis281.isPresent());
-		assertEquals("FgMAIQAEFyQ=", obis281.get().get("frame").asText());
-		Optional<JsonNode> obis282 = items.stream()
-				.filter(i -> i.get("header").get("id").asText().equals("urn:mdvh4006:100022:0x0026")).findFirst();
-		assertTrue(obis282.isPresent());
-		assertEquals("FgMAJgAEpuU=", obis282.get().get("frame").asText());
 		Optional<JsonNode> obis170 = items.stream()
-				.filter(i -> i.get("header").get("id").asText().equals("urn:mdvh4006:100022:0x002B")).findFirst();
+				.filter(i -> i.get("header").get("id").asText().equals("urn:mdvh4006:39000976:0x4000")).findFirst();
 		assertTrue(obis170.isPresent());
-		assertEquals("FgMAKwACtyQ=", obis170.get().get("frame").asText());
+		assertEquals(Utils.toBase64(HexFormat.of().parseHex("770340000002DA9D")), obis170.get().get("frame").asText());
 
 	}
 }
